--- a/Pipfile
+++ b/Pipfile
@@ -6,16 +6,35 @@ verify_ssl = true
 [dev-packages]
 
 [packages]
-django = "*"
-django-debug-toolbar = "*"
-django-oscar = "*"
-django-widget-tweaks = "*"
-django-compressor = "*"
-pycountry = "*"
-psycopg2 = "*"
-elasticsearch5 = "*"
-django-haystack = "*"
-gunicorn = "*"
+django-debug-toolbar = "==1.11"
+django-widget-tweaks = "==1.4.3"
+pycountry = "==18.12.8"
+psycopg2 = "==2.8.2"
+elasticsearch5 = "==5.5.5"
+django-haystack = "==2.8.1"
+gunicorn = "==19.9.0"
+django-appconf = "==1.0.3"
+django-extra-views = "==0.11.0"
+django-phonenumber-field = "==2.0.1"
+django-tables2 = "==1.21.2"
+django-treebeard = "==4.3"
+factory-boy = "==2.12.0"
+phonenumbers = "==8.10.11"
+purl = "==1.5"
+python-dateutil = "==2.8.0"
+pytz = "==2019.1"
+rcssmin = "==1.0.6"
+rjsmin = "==1.0.12"
+six = "==1.12.0"
+sqlparse = "==0.3.0"
+text-unidecode = "==1.2"
+urllib3 = "==1.25.2"
+django_compressor = "==2.2"
+Babel = "==2.6.0"
+Faker = "==1.0.6"
+Pillow = "==6.0.0"
+django-oscar = "~=1.6.7"
+django = "~=2.1.8"
 
 [requires]
 python_version = "3.7"
