--- a/production.yml
+++ b/production.yml
@@ -8,11 +8,10 @@ services:
       - "8000"
     links:
       - postgres:postgres
-      - redis:redis
     volumes:
       - web-static:/usr/src/app/static
     env_file: .env
-    command: /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+    command: /usr/local/bin/gunicorn clue.wsgi:application -w 2 -b :8000
 
   nginx:
     restart: always
@@ -32,15 +31,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data/
 
-  redis:
-    restart: always
-    image: redis:latest
-    ports:
-      - "6379"
-    volumes:
-      - redisdata:/data
-
+  
 volumes:
   web-static:
   pgdata:
-  redisdata:
