--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     env_file: .env
     environment:
       DEBUG: 'true'
-    command:  bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000" && /usr/local/bin/gunicorn docker_django.wsgi:application -w 2 -b :8000
+    command:  bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000" && /usr/local/bin/gunicorn clue.wsgi:application -w 2 -b :8000
 
   nginx:
     restart: always
