--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,9 @@ Faker = "==1.0.6"
 Pillow = "==6.0.0"
 django-oscar = "~=1.6.7"
 django = "~=2.1.8"
+django-environ = "==0.4.4"
+django-extensions = "==2.0.7"
+whitenoise = "==3.3.1"
 
 [requires]
 python_version = "3.7"
